--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
     "pinia": "^3.0.3",
+    "sweetalert2": "^11.22.4",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@types/node": "^24.3.0",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.7.0",
     "typescript": "~5.8.3",
