--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
+    "jwt-decode": "^4.0.0",
     "pinia": "^3.0.3",
     "sweetalert2": "^11.22.4",
     "vue": "^3.5.18",
