CI and CD connecteed

--- a/.github/workflows/ci-frontend.yml
+++ b/.github/workflows/ci-frontend.yml
@@ -12,10 +12,10 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ secrets.GHCR_USERNAME }}
@@ -26,3 +26,12 @@ jobs:
           IMAGE_ID=ghcr.io/${{ secrets.GHCR_USERNAME }}/recruitment-frontend
           docker build -t $IMAGE_ID:latest .
           docker push $IMAGE_ID:latest
+
+      - name: Trigger CD workflow in deployment repo
+        uses: peter-evans/repository-dispatch@v3
+        with:
+          token: ${{ secrets.CD_TRIGGER_PAT }}
+          repository: bavindushan/recruitment-system-deployment
+          event-type: deploy-frontend
+          client-payload: '{"service": "frontend"}'
+
